[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
reqwest = {version = "0.12.22", features = [ "blocking", "json"]}
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
sysinfo = "0.36.0"
tokio = { version = "1.46.1", features = ["full"] }

